src/objects/Reply_To__c.object
<CustomObject>
    <fields>
        <fullName>ContactCode__c</fullName>
        <label>ContactCode</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reply To</relationshipLabel>
        <relationshipName>Reply_To</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QueryCode__c</fullName>
        <label>QueryCode</label>
        <referenceTo>Query__c</referenceTo>
        <relationshipLabel>Reply To</relationshipLabel>
        <relationshipName>Reply_To</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Replied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replied</label>
        <type>Checkbox</type>
    </fields>
    <label>Reply To</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Replied__c</columns>
        <columns>ContactCode__c</columns>
        <columns>QueryCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reply To Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reply To</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>